sync tree-sitter with base

--- a/extension.toml
+++ b/extension.toml
@@ -3,7 +3,10 @@ name = "Fortran"
 description = "Fortran support for Zed"
 version = "0.0.2"
 schema_version = 1
-authors = ["Xavier Maruff <xavier.maruff@outlook.com>", "John Makowski <brickcodes@proton.me>"]
+authors = [
+    "Xavier Maruff <xavier.maruff@outlook.com>",
+    "John Makowski <brickcodes@proton.me>",
+]
 repository = "https://github.com/Xavier-Maruff/zed-fortran"
 
 [language_servers.fortls]
@@ -12,4 +15,5 @@ language = "Fortran"
 
 [grammars.fortran]
 repository = "https://github.com/Xavier-Maruff/tree-sitter-fortran-wasm"
-commit = "1105385cbcfc7cef1a7bb2d22d61c41678bd1409"
+commit = "87f43efa6d40c00d8ceb9831082348fa82f84ac3"
+#commit = "1105385cbcfc7cef1a7bb2d22d61c41678bd1409"
